[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "brain-games"
authors = ["Sonya Grigorovich"]
readme = "README.md"
packages = [{include = "brain_games"}]
repository = "https://github.com/unt1tledd/python-project-49.git"
classifiers = [

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_game:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-prime = "brain_games.scripts.brain_prime:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
